// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Setup Environment when a message is not passed to the component should match the snapshot on file (styles) 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 .alert-light {
  padding-top: 5px;
  padding-bottom: 0px;
  margin-bottom: 0px;
}

<div
  class="c0"
>
  <div
    class="alert alert-light"
    data-testid="alert"
    role="alert"
  >
     
  </div>
</div>
`;

exports[`Setup Environment when a message is passed to the component should match the snapshot on file (styles) 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 .alert-light {
  padding-top: 5px;
  padding-bottom: 0px;
  margin-bottom: 0px;
}

<div
  class="c0"
>
  <div
    class="alert alert-light"
    data-testid="alert"
    role="alert"
  >
    Test Message
  </div>
</div>
`;
